// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminGuesser /> renders loading 1`] = `
<Loading
  loadingPrimary="ra.page.loading"
  loadingSecondary="ra.message.loading"
/>
`;

exports[`<AdminGuesser /> renders with custom resources 1`] = `
<Admin
  dataProvider={
    {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "introspect": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  i18nProvider={
    {
      "changeLocale": [Function],
      "getLocale": [Function],
      "getLocales": [Function],
      "translate": [Function],
    }
  }
  loading={[Function]}
  store={
    {
      "getItem": [Function],
      "removeItem": [Function],
      "removeItems": [Function],
      "reset": [Function],
      "setItem": [Function],
      "setup": [Function],
      "subscribe": [Function],
      "teardown": [Function],
    }
  }
>
  <ResourceGuesser
    name="custom"
  />
</Admin>
`;

exports[`<AdminGuesser /> renders without custom resources 1`] = `
<Admin
  dataProvider={
    {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "introspect": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  i18nProvider={
    {
      "changeLocale": [Function],
      "getLocale": [Function],
      "getLocales": [Function],
      "translate": [Function],
    }
  }
  loading={[Function]}
  store={
    {
      "getItem": [Function],
      "removeItem": [Function],
      "removeItems": [Function],
      "reset": [Function],
      "setItem": [Function],
      "setup": [Function],
      "subscribe": [Function],
      "teardown": [Function],
    }
  }
>
  <ResourceGuesser
    name="books"
  />
</Admin>
`;

exports[`<AdminGuesser /> renders without data 1`] = `
<Admin
  dataProvider={
    {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "introspect": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  i18nProvider={
    {
      "changeLocale": [Function],
      "getLocale": [Function],
      "getLocales": [Function],
      "translate": [Function],
    }
  }
  loading={[Function]}
  store={
    {
      "getItem": [Function],
      "removeItem": [Function],
      "removeItems": [Function],
      "reset": [Function],
      "setItem": [Function],
      "setup": [Function],
      "subscribe": [Function],
      "teardown": [Function],
    }
  }
/>
`;
